Fully implement the Authentication system
